--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,6 +2,9 @@
 <a href="{{ post.url }}">
   <h2>{{ post.title }}</h2>
 </a>
-<p class="author">by {{post.author}} on {{post.date | date: '%B %d %Y'}}</p>
+<p class="author">by {{post.author}} on {{post.date | date: '%B %d, %Y'}}</p>
 
 {{ content }}
+
+<!-- again, b/c it's used on the home page -->
+<a href="{ post.url }">Permalink to this post</a>
