More space between posts.

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -7,4 +7,4 @@
 {{ content }}
 
 <!-- again, b/c it's used on the home page -->
-<a href="{ post.url }">Permalink to this post</a>
+<a href="{{ post.url }}">Permalink to this post</a>
