--- a/_includes/head-includes.html
+++ b/_includes/head-includes.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" href="/css/pygments.css" />
 <link rel="stylesheet" href="/css/main.css" />
