--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,6 +4,8 @@
       <a class="brand" href="/">Matt Conway</a>
       <ul class="nav">
         <li><a href="/projects">Projects</a></li>
+        <li><a href="/copyright">Copyright</a></li>
+        <li><a href="/archive">Archive</a></li>
       </ul>
     </div>
   </div>
