--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ page.title }}&mdash;Matt Conway</title>
+    <title>{{ page.title }}&mdash;Indicatrix</title>
 
     {% include head-includes.html %}
 
@@ -11,7 +11,8 @@
 
     <div class="container">
       <div class="hero-unit">
-        <h1>Matt Conway</h1>
+        <h1><a href="/"><img src="/img/header.jpg" alt="Indicatrix" /></a></h1>
+        <div class="vspacer"></div>
         <p>A blog about mapping, Python, GIS, JavaScript, transit, open data,
           planning, &c.</p>
       </div>
