--- a/_includes/boilerplate.html
+++ b/_includes/boilerplate.html
@@ -3,8 +3,8 @@
   <div class="span1">&nbsp;</div>
   <div class="span10">
     <p class="center">
-      CC-BY-SA 3.0 by Matt Conway, 2011-2012. Created with
-      Jekyll and Bootstrap
+      <a href="/copyright">CC-BY-SA 3.0</a> by Matt Conway, 2011-2012. Created with
+      Jekyll and Bootstrap.
     </p>
   </div>
 </div>
