--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="/">Matt Conway</a>
+      <a class="brand indicatrix" href="/">Indicatrix</a>
       <ul class="nav">
         <li><a href="/projects">Projects</a></li>
         <li><a href="/copyright">Copyright</a></li>
