--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,4 @@ a { color: #0066aa }
 .next { float: right }
 .clear { clear: both }
 a img { border: 0px }
+.indicatrix { font-family: 'URW Bookman L', serif; font-weight: bold }
