--- a/_includes/head_includes.html
+++ b/_includes/head_includes.html
@@ -1,2 +1,3 @@
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" href="/css/main.css" />
