Fix contact, really.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,6 +6,7 @@
         <li><a href="/projects">Projects</a></li>
         <li><a href="/copyright">Copyright</a></li>
         <li><a href="/archive">Archive</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </div>
   </div>
