--- a/_includes/head-includes.html
+++ b/_includes/head-includes.html
@@ -1,3 +1,7 @@
 <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/css/pygments.css" />
 <link rel="stylesheet" href="/css/main.css" />
+<link rel="icon" href="/favicon.ico" />
+<script 
+   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=Accessible">
+</script>
