--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -3,6 +3,8 @@
   <head>
     <title>{{ page.title }}&mdash;Indicatrix</title>
 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
     {% include head-includes.html %}
 
   </head>
