Include comment count on index page.

--- a/_layouts/single-post.html
+++ b/_layouts/single-post.html
@@ -2,6 +2,7 @@
 layout: standard
 ---
 {% assign post = page %}
+{% assign commentCount = false %}
 {% include post.html %}
 
 <div class="vspacer5"></div>
