--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,6 +2,11 @@
 <a href="{{ post.url }}">
   <h2>{{ post.title }}</h2>
 </a>
+
+{% if commentCount %}
+  <a href="{{ post.url }}#disqus_thread"> . . . </a>
+{% endif %}
+
 <p class="author">by {{post.author}} on {{post.date | date: '%B %d, %Y'}}</p>
 
 {{ content }}
