Make it work on phones!

--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -12,7 +12,7 @@
     {% include navbar.html %}
 
     <div class="container">
-      <div class="hero-unit">
+      <div class="hero-unit hidden-phone">
         <h1><a href="/"><img src="/img/header.jpg" alt="Indicatrix" /></a></h1>
         <div class="vspacer"></div>
         <p>A blog about mapping, Python, GIS, JavaScript, transit, open data,
