--- a/_includes/end-of-body-includes.html
+++ b/_includes/end-of-body-includes.html
@@ -1,1 +1,4 @@
 <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+<script 
+   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=Accessible">
+</script>
