--- a/_includes/head-includes.html
+++ b/_includes/head-includes.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-responsive.min.css" />
+<meta name="viewport" content="width=device-width;initial-scale=1.0" />
 <link rel="stylesheet" href="/css/pygments.css" />
 <link rel="stylesheet" href="/css/main.css" />
 <link rel="icon" href="/favicon.ico" />
-<script 
-   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=Accessible">
-</script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
