--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,13 +1,22 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" 
+              data-target=".nav-collapse">
+        <span class="caret"></span>
+      </a>
+
       <a class="brand indicatrix" href="/">Indicatrix</a>
-      <ul class="nav">
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/copyright">Copyright</a></li>
-        <li><a href="/archive">Archive</a></li>
-        <li><a href="/contact">Contact</a></li>
-      </ul>
+      <!-- allow the links to collapse. Inspired by the UX on the Bootstrap
+           site itself -->
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/copyright">Copyright</a></li>
+          <li><a href="/archive">Archive</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
