--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,9 +12,10 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li><a href="/projects">Projects</a></li>
-          <li><a href="/copyright">Copyright</a></li>
           <li><a href="/archive">Archive</a></li>
+          <li><a href="/publications">Publications and Presentations</a></li>
           <li><a href="/contact">Contact</a></li>
+          <li><a href="/copyright">Copyright</a></li>
         </ul>
       </div>
     </div>
