A little work on #1.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,6 +7,9 @@
       </a>
 
       <a class="brand indicatrix" href="/">Indicatrix</a>
+
+      <a href="#content" class="hidden508">Skip to content</a>
+
       <!-- allow the links to collapse. Inspired by the UX on the Bootstrap
            site itself -->
       <div class="nav-collapse collapse">
