--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -21,6 +21,7 @@
 
       <div class="row">
         <div class="span9">
+          <a class="hidden508" name="content"></a>
           {{ content }}
         </div>
         <div class="span3">
