--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,12 +2,12 @@
   <h3>Other Accounts</h3>
   <ul class="linklist">
     <li><a href="http://github.com/mattwigway">GitHub</a></li>
-    <li><a href="http://twitter.com/mattwigway">Twitter</a></li>
+    <li><a href="http://www.linkedin.com/profile/view?id=205163847">LinkedIn</a></li>
   </ul>
 </div>
 
 <div class="barbox">
-  <h3>Blogroll</h3>
+  <h3>Blogs I'm Watching</h3>
   <ul class="linklist">
     <li>
       <a href="http://www.humantransit.org">Human Transit</a>
