--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,10 +14,10 @@
            site itself -->
       <div class="nav-collapse collapse">
         <ul class="nav">
+          <li><a href="/about">About Me</a></li>
           <li><a href="/projects">Projects</a></li>
           <li><a href="/archive">Archive</a></li>
           <li><a href="/publications">Publications and Presentations</a></li>
-          <li><a href="/contact">Contact</a></li>
           <li><a href="/copyright">Copyright</a></li>
         </ul>
       </div>
