Add greenlight stuff, css changes, license changes, &c. Welcome 2014!

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,9 @@
 /* override bootstrap, make it darker */
 a { color: #0066aa }
 
-body { color: #000000 }
+body { color: #000000; }
+
+p { text-align: justify }
 
 .previous { float: left }
 .next { float: right }
