Redo header - we're all fancy now!

--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -11,14 +11,13 @@
   <body>
     {% include navbar.html %}
 
-    <div class="container">
-      <div class="hero-unit hidden-phone">
-        <h1><a href="/"><img src="/img/header.jpg" alt="Indicatrix" /></a></h1>
-        <div class="vspacer"></div>
-        <p>A blog about mapping, Python, GIS, JavaScript, transit, open data,
-          planning, &c.</p>
+    <div class="header">
+      <div class="container">
+        <h1><a href="/"><img src="/img/header_text.png" alt="indicatrix" /></a></h1>
       </div>
+    </div>
 
+    <div class="container">
       <div class="row">
         <div class="span9">
           <a class="hidden508" name="content"></a>
