--- a/_includes/head-includes.html
+++ b/_includes/head-includes.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="/css/main.css" />
 <link rel="icon" href="/favicon.ico" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="/js/sprintf.min.js"></script>
+<script src="/js/data-map.js"></script>
 
 <!-- Google Analytics -->
 <script>
