Project.indicatrix.org link.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li><a href="/about">About Me</a></li>
-          <li><a href="/projects">Projects</a></li>
+          <li><a href="http://projects.indicatrix.org">Projects</a></li>
           <li><a href="/archive">Archive</a></li>
           <li><a href="/publications">Publications and Presentations</a></li>
           <li><a href="/copyright">Copyright</a></li>
