--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -19,8 +19,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="span9">
-          <a class="hidden508" name="content"></a>
+        <div class="span9" id="content">
           {{ content }}
         </div>
         <div class="span3">
