--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,14 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" 
+      <a class="btn btn-navbar" data-toggle="collapse"
               data-target=".nav-collapse">
         <span class="caret"></span>
       </a>
 
       <a class="brand indicatrix" href="/">Indicatrix</a>
 
-      <a href="#content" class="hidden508">Skip to content</a>
+      <a href="#content" class="sr-only">Skip to content</a>
 
       <!-- allow the links to collapse. Inspired by the UX on the Bootstrap
            site itself -->
