--- a/_includes/head-includes.html
+++ b/_includes/head-includes.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-responsive.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css" />
 <meta name="viewport" content="width=device-width;initial-scale=1.0" />
 <link rel="stylesheet" href="/css/pygments.css" />
 <link rel="stylesheet" href="/css/main.css" />
