--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,26 +1,23 @@
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse"
-              data-target=".nav-collapse">
-        <span class="caret"></span>
-      </a>
-
-      <a class="brand indicatrix" href="/">Indicatrix</a>
-
-      <a href="#content" class="sr-only">Skip to content</a>
-
-      <!-- allow the links to collapse. Inspired by the UX on the Bootstrap
-           site itself -->
-      <div class="nav-collapse collapse">
-        <ul class="nav">
-          <li><a href="/about">About Me</a></li>
-          <li><a href="http://projects.indicatrix.org">Projects</a></li>
-          <li><a href="/archive">Archive</a></li>
-          <li><a href="/publications">Publications and Presentations</a></li>
-          <li><a href="/copyright">Copyright</a></li>
-        </ul>
-      </div>
-    </div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+      data-target="#nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="sr-only">Toggle navigation</span>
+    </button>
+    <a class="navbar-brand indicatrix" href="/">Indicatrix</a>
+  </div>
+  <!-- allow the links to collapse. Inspired by the UX on the Bootstrap
+  site itself -->
+  <div class="navbar-collapse collapse" id="nav-collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="/about">About Me</a></li>
+      <li><a href="http://projects.indicatrix.org">Projects</a></li>
+      <li><a href="/archive">Archive</a></li>
+      <li><a href="/publications">Publications and Presentations</a></li>
+      <li><a href="/copyright">Copyright</a></li>
+    </ul>
   </div>
 </div>
+</nav>
