--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -9,6 +9,8 @@
 
   </head>
   <body>
+    <a href="#content" class="sr-only">Skip to content</a>
+
     {% include navbar.html %}
 
     <div class="header">
