--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -21,10 +21,10 @@
 
     <div class="container">
       <div class="row">
-        <div class="span9" id="content">
+        <div class="col-md-9" id="content">
           {{ content }}
         </div>
-        <div class="span3">
+        <div class="col-md-3">
           {% include sidebar.html %}
         </div>
       </div>
