--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>{{ page.title }}&mdash;Indicatrix</title>
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    {% include head-includes.html %}
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
+    <link rel="stylesheet" href="/css/main.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
   </head>
+
   <body>
-    <a href="#content" class="sr-only">Skip to content</a>
-
-    {% include navbar.html %}
-
-    <div class="header">
+    <nav class="navbar navbar-plain navbar-fixed-top">
       <div class="container">
-        <h1><a href="/"><img src="/img/header_text.png" alt="indicatrix" /></a></h1>
+        <div class="col-xs-12 col-md-10 col-md-offset-1">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse" aria-expanded="false" aria-controls="nav-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="caret"></span>
+            </button>
+            <a href="/" class="navbar-brand indicatrix">Indicatrix</a>
+        </div>
+        <div class="navbar-collapse collapse" id="nav-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/about">About Me</a>
+            </li>
+            <li><a href="http://projects.indicatrix.org">Projects</a>
+            </li>
+            <li><a href="/archive">Archive</a>
+            </li>
+            <li><a href="/publications">Publications and Presentations</a>
+            </li>
+            <li><a href="/copyright">Copyright</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </nav>
+
+    <!-- header image -->
+    <div class="header hidden-xs">
+      <div class="container">
+        <div class="col-md-10 col-md-offset-1">
+          <h1><a href="/"><img src="/img/header_text.png" alt="indicatrix" /></a></h1>
+        </div>
       </div>
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="col-md-9" id="content">
-          {{ content }}
-        </div>
-        <div class="col-md-3">
-          {% include sidebar.html %}
-        </div>
+      <div class="col-xs-12 col-md-10 col-md-offset-1">
+        {{ content }}
       </div>
-
-      <div class="vspacer5"></div>
-
-      {% include boilerplate.html %}
     </div>
-    {% include end-of-body-includes.html %}
+
+    <div class="container">
+      <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <p class="center boilerplate">
+        <a href="/copyright">CC-BY-NC 4.0</a> by Matthew Wigginton Conway, 2011&ndash;2015.
+      </p>
+      </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </body>
+</html>
