--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -86,5 +86,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="/js/sprintf.min.js"></script>
+    <script src="/js/data-map.js"></script>
   </body>
 </html>
